Fixed the vertical misalignment of icons in the menu dropdowns when spawned from a popout window

--- a/src/scss/User Interface/Popups/menuPopup.scss
+++ b/src/scss/User Interface/Popups/menuPopup.scss
@@ -40,11 +40,19 @@
 	margin: 0 4px;
 	border: 1px solid transparent;
 
+	.is-popout-window & {
+		align-items: unset;
+	}
+
 	.menu-item-icon {
 		width: fit-content;
 		height: fit-content;
 		padding-top: 3px;
 		padding-right: 8px;
+
+		.is-popout-window & {
+			padding-top: 5px;
+		}
 	}
 }
 
